--- a/miniDapp/config/minidapp.conf
+++ b/miniDapp/config/minidapp.conf
@@ -1,8 +1,8 @@
 {
 	"name":"Power Console",
 	"headline":"Minima Power Console",
-	"description":"Minima Power Console with Added Huzzbah!",
-	"version": "0.1.0",
+	"description":"Minima Terminal with Added Huzzbah!",
+	"version": "1.0.0",
 	"lastKey": "",
 	"background":"./images/console.svg",
 	"icon":"./images/console.svg",
